--- a/style.css
+++ b/style.css
@@ -17,13 +17,23 @@ body {
     max-height: 300px;
     max-width: 200px;
 }
+.greaterFlex{
+    display: flex;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    flex-direction: column;
+    height: 90vh;
+}
 
 .mainFlex{
     display: flex;
     justify-content: center;
     align-items: center;
     align-self: center;
-    height: 50vh;
+    height: 30vh;
+    margin-bottom: 10%;
 }
 
 #mainImageDisplay{
